// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
<html>
  <head>
    <style
      data-emotion="css 1lrxbo5"
      data-s=""
    >
      .css-1lrxbo5{color:hotpink;}
    </style>
  </head>
  <body />
</html>
`;

exports[`rehydrated styles to head can be flushed 1`] = `
<html>
  <head>
    <style
      data-emotion="emo 1lrxbo5"
      data-s=""
    >
      .emo-1lrxbo5{color:hotpink;}
    </style>
  </head>
  <body />
</html>
`;

exports[`rehydrated styles to head can be flushed 2`] = `
<html>
  <head />
  <body />
</html>
`;
